--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,10 @@
 dash (0.5.4-0) unstable; urgency=low
 
   * new upstream version.
+  * debian/diff/????-*.diff: remove all but
+    ????-Restore-pgrp-on-exit-fix-backgrounded-MC-bug.diff; obsolete.
 
- -- Gerrit Pape <pape@smarden.org>  Wed, 18 Jul 2007 08:41:26 +0000
+ -- Gerrit Pape <pape@smarden.org>  Wed, 18 Jul 2007 08:43:04 +0000
 
 dash (0.5.3-9) unstable; urgency=low
 
