* debian/diff/0001-SHELL-Restore-foreground-process-group-on-exit.diff:     new; from upstream git, replaces     debian/diff/0001-Restore-pgrp-on-exit-fix-backgrounded-MC-bug.diff.   * debian/diff/0002-SHELL-Move-flushall-to-the-point-just-before-_exit.diff,     debian/diff/0003-BUILTIN-test-White-space-fixes.diff,     debian/diff/0004-BUILTIN-test-little-size-and-speed-optimizations.diff:     new; from upstream git (closes: #431320).

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,15 @@
+dash (0.5.4-2) unstable; urgency=low
+
+  * debian/diff/0001-SHELL-Restore-foreground-process-group-on-exit.diff:
+    new; from upstream git, replaces
+    debian/diff/0001-Restore-pgrp-on-exit-fix-backgrounded-MC-bug.diff.
+  * debian/diff/0002-SHELL-Move-flushall-to-the-point-just-before-_exit.diff,
+    debian/diff/0003-BUILTIN-test-White-space-fixes.diff,
+    debian/diff/0004-BUILTIN-test-little-size-and-speed-optimizations.diff:
+    new; from upstream git (closes: #431320).
+
+ -- Gerrit Pape <pape@smarden.org>  Mon, 24 Sep 2007 08:46:04 +0000
+
 dash (0.5.4-1) unstable; urgency=low
 
   * new upstream version.
