--- a/debian/changelog
+++ b/debian/changelog
@@ -10,8 +10,10 @@ dash (0.5.4-2) unstable; urgency=low
   * debian/diff/0005-dash.1-clarify-description-of-nt-ot-options-to-te.diff:
     new; dash.1: clarify description of -nt, -ot options to test builtin
     (closes: #373611).
+  * debian/diff/0006-dash.1-clarify-syntax-of-the-for-command.diff: new;
+    dash.1: clarify syntax of the for command (closes: #387441).
 
- -- Gerrit Pape <pape@smarden.org>  Tue, 25 Sep 2007 07:38:41 +0000
+ -- Gerrit Pape <pape@smarden.org>  Tue, 25 Sep 2007 07:39:37 +0000
 
 dash (0.5.4-1) unstable; urgency=low
 
