--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,13 @@
+dash (0.5.4-3) unstable; urgency=low
+
+  * debian/diff/0005-*..0037-*: new: from upstream git.
+    * 0025-*: Report substition errors at expansion time (closes: #418774).
+  * debian/diff/0005-dash.1-clarify-description-of-nt-ot-options-to-te.diff,
+    debian/diff/0006-dash.1-clarify-syntax-of-the-for-command.diff: remove;
+    applied upstream.
+
+ -- Gerrit Pape <pape@smarden.org>  Mon, 10 Dec 2007 12:53:57 +0000
+
 dash (0.5.4-2) unstable; urgency=low
 
   * debian/diff/0001-SHELL-Restore-foreground-process-group-on-exit.diff:
