--- a/debian/changelog
+++ b/debian/changelog
@@ -5,8 +5,12 @@ dash (0.5.4-3) unstable; urgency=low
   * debian/diff/0005-dash.1-clarify-description-of-nt-ot-options-to-te.diff,
     debian/diff/0006-dash.1-clarify-syntax-of-the-for-command.diff: remove;
     applied upstream.
+  * debian/rules: no longer build dash.udeb package (on request of Otavio
+    Salvador, closes: #439139, #431312).
+  * debian/control: no longer Build-Depends: dietlibc; remove dash.udeb
+    package.
 
- -- Gerrit Pape <pape@smarden.org>  Mon, 10 Dec 2007 12:53:57 +0000
+ -- Gerrit Pape <pape@smarden.org>  Mon, 10 Dec 2007 13:01:33 +0000
 
 dash (0.5.4-2) unstable; urgency=low
 
