--- a/debian/po/es.po
+++ b/debian/po/es.po
@@ -2,8 +2,8 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: dash 0.4.18\n"
-"Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2007-01-29 07:27+0100\n"
+"Report-Msgid-Bugs-To: Source: dash@packages.debian.org\n"
+"POT-Creation-Date: 2007-11-11 19:37+0000\n"
 "PO-Revision-Date: 2006-12-08 23:49+0100\n"
 "Last-Translator: Fernando Cerezal López <kryptos21@gmail.com>\n"
 "Language-Team: Debian L10n Spanish <debian-l10n-spanish@lists.debian.org>\n"
@@ -13,19 +13,31 @@ msgstr ""
 
 #. Type: boolean
 #. Description
-#: ../dash.templates.in:1001
+#: ../dash.templates.in:2001
 msgid "Install dash as /bin/sh?"
 msgstr "¿Instalar dash como /bin/sh?"
 
 #. Type: boolean
 #. Description
-#: ../dash.templates.in:1001
+#: ../dash.templates.in:2001
+msgid "The default /bin/sh shell on Debian and Debian-based systems is bash."
+msgstr ""
+
+#. Type: boolean
+#. Description
+#: ../dash.templates.in:2001
+#, fuzzy
+#| msgid ""
+#| "Bash is the default /bin/sh on a Debian system.  However, since the "
+#| "Debian policy requires all shell scripts using /bin/sh to be POSIX "
+#| "compliant, any shell that conforms to POSIX can serve as /bin/sh.  Since "
+#| "dash is POSIX compliant, it can be used as /bin/sh.  You may wish to do "
+#| "this because dash is faster and smaller than bash."
 msgid ""
-"Bash is the default /bin/sh on a Debian system.  However, since the Debian "
-"policy requires all shell scripts using /bin/sh to be POSIX compliant, any "
-"shell that conforms to POSIX can serve as /bin/sh.  Since dash is POSIX "
-"compliant, it can be used as /bin/sh.  You may wish to do this because dash "
-"is faster and smaller than bash."
+"However, since the distribution policy requires all shell scripts using /bin/"
+"sh to be POSIX compliant, any shell that conforms to POSIX, such as dash, "
+"can serve as /bin/sh. You may wish to do this because dash is faster and "
+"smaller than bash."
 msgstr ""
 "Bash es el intérprete de órdenes /bin/sh predeterminado de los sistemas "
 "Debian. Sin embargo, dado que nuestras normas obligan a que todos los "
