--- a/debian/po/pt_BR.po
+++ b/debian/po/pt_BR.po
@@ -14,8 +14,8 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: dash\n"
-"Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2007-01-29 07:27+0100\n"
+"Report-Msgid-Bugs-To: Source: dash@packages.debian.org\n"
+"POT-Creation-Date: 2007-11-11 19:37+0000\n"
 "PO-Revision-Date: 2006-12-19 21:23-0200\n"
 "Last-Translator: André Luís Lopes <andrelop@debian.org>\n"
 "Language-Team: Debian-BR Project <debian-l10n-portuguese@lists.debian.org>\n"
@@ -25,19 +25,31 @@ msgstr ""
 
 #. Type: boolean
 #. Description
-#: ../dash.templates.in:1001
+#: ../dash.templates.in:2001
 msgid "Install dash as /bin/sh?"
 msgstr "Instalar dash como /bin/sh?"
 
 #. Type: boolean
 #. Description
-#: ../dash.templates.in:1001
+#: ../dash.templates.in:2001
+msgid "The default /bin/sh shell on Debian and Debian-based systems is bash."
+msgstr ""
+
+#. Type: boolean
+#. Description
+#: ../dash.templates.in:2001
+#, fuzzy
+#| msgid ""
+#| "Bash is the default /bin/sh on a Debian system.  However, since the "
+#| "Debian policy requires all shell scripts using /bin/sh to be POSIX "
+#| "compliant, any shell that conforms to POSIX can serve as /bin/sh.  Since "
+#| "dash is POSIX compliant, it can be used as /bin/sh.  You may wish to do "
+#| "this because dash is faster and smaller than bash."
 msgid ""
-"Bash is the default /bin/sh on a Debian system.  However, since the Debian "
-"policy requires all shell scripts using /bin/sh to be POSIX compliant, any "
-"shell that conforms to POSIX can serve as /bin/sh.  Since dash is POSIX "
-"compliant, it can be used as /bin/sh.  You may wish to do this because dash "
-"is faster and smaller than bash."
+"However, since the distribution policy requires all shell scripts using /bin/"
+"sh to be POSIX compliant, any shell that conforms to POSIX, such as dash, "
+"can serve as /bin/sh. You may wish to do this because dash is faster and "
+"smaller than bash."
 msgstr ""
 "O bash é o /bin/sh padrão em um sistema Debian. Porém, uma vez que nossa "
 "política requer que todos os scripts shell usando /bin/sh sejam compatíveis "
