--- a/debian/po/da.po
+++ b/debian/po/da.po
@@ -5,8 +5,8 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: dash_0.4.21_templates\n"
-"Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2007-01-29 07:27+0100\n"
+"Report-Msgid-Bugs-To: Source: dash@packages.debian.org\n"
+"POT-Creation-Date: 2007-11-11 19:37+0000\n"
 "PO-Revision-Date: 2006-11-15 15:01+0100\n"
 "Last-Translator: Claus Hindsgaul <claus.hindsgaul@gmail.com>\n"
 "Language-Team: Danish\n"
@@ -17,19 +17,31 @@ msgstr ""
 
 #. Type: boolean
 #. Description
-#: ../dash.templates.in:1001
+#: ../dash.templates.in:2001
 msgid "Install dash as /bin/sh?"
 msgstr "Installér dash som /bin/sh?"
 
 #. Type: boolean
 #. Description
-#: ../dash.templates.in:1001
+#: ../dash.templates.in:2001
+msgid "The default /bin/sh shell on Debian and Debian-based systems is bash."
+msgstr ""
+
+#. Type: boolean
+#. Description
+#: ../dash.templates.in:2001
+#, fuzzy
+#| msgid ""
+#| "Bash is the default /bin/sh on a Debian system.  However, since the "
+#| "Debian policy requires all shell scripts using /bin/sh to be POSIX "
+#| "compliant, any shell that conforms to POSIX can serve as /bin/sh.  Since "
+#| "dash is POSIX compliant, it can be used as /bin/sh.  You may wish to do "
+#| "this because dash is faster and smaller than bash."
 msgid ""
-"Bash is the default /bin/sh on a Debian system.  However, since the Debian "
-"policy requires all shell scripts using /bin/sh to be POSIX compliant, any "
-"shell that conforms to POSIX can serve as /bin/sh.  Since dash is POSIX "
-"compliant, it can be used as /bin/sh.  You may wish to do this because dash "
-"is faster and smaller than bash."
+"However, since the distribution policy requires all shell scripts using /bin/"
+"sh to be POSIX compliant, any shell that conforms to POSIX, such as dash, "
+"can serve as /bin/sh. You may wish to do this because dash is faster and "
+"smaller than bash."
 msgstr ""
 "Bash er som udgangspunkt /bin/sh på et Debiansystem. Men da det er Debians "
 "politik, at skalskripter, der benytter /bin/sh skal overholde POSIX-"
