--- a/debian/po/gl.po
+++ b/debian/po/gl.po
@@ -5,9 +5,9 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: dash\n"
-"Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2007-01-29 07:27+0100\n"
-"PO-Revision-Date: 2007-01-22 15:37+0100\n"
+"Report-Msgid-Bugs-To: Source: dash@packages.debian.org\n"
+"POT-Creation-Date: 2007-11-11 19:37+0000\n"
+"PO-Revision-Date: 2007-11-11 19:43+0000\n"
 "Last-Translator: Jacobo Tarrio <jtarrio@debian.org>\n"
 "Language-Team: Galician <proxecto@trasno.net>\n"
 "MIME-Version: 1.0\n"
@@ -16,22 +16,28 @@ msgstr ""
 
 #. Type: boolean
 #. Description
-#: ../dash.templates.in:1001
+#: ../dash.templates.in:2001
 msgid "Install dash as /bin/sh?"
 msgstr "¿Instalar dash coma /bin/sh?"
 
 #. Type: boolean
 #. Description
-#: ../dash.templates.in:1001
-msgid ""
-"Bash is the default /bin/sh on a Debian system.  However, since the Debian "
-"policy requires all shell scripts using /bin/sh to be POSIX compliant, any "
-"shell that conforms to POSIX can serve as /bin/sh.  Since dash is POSIX "
-"compliant, it can be used as /bin/sh.  You may wish to do this because dash "
-"is faster and smaller than bash."
+#: ../dash.templates.in:2001
+msgid "The default /bin/sh shell on Debian and Debian-based systems is bash."
 msgstr ""
-"Bash é o /bin/sh por defecto nos sistemas Debian. Nembargantes, como a "
-"normativa de Debian require que tódolos scripts que empreguen /bin/sh sexan "
-"compatibles con POSIX, calquera shell que siga POSIX pode servir coma /bin/"
-"sh. Xa que dash cumpre con POSIX, pódese empregar coma /bin/sh. Pode ser "
-"unha boa idea facelo, xa que dash é máis rápido e máis pequeno que bash."
+"O intérprete de ordes /bin/sh por defecto dos sistemas Debian e baseados en "
+"Debian é bash."
+
+#. Type: boolean
+#. Description
+#: ../dash.templates.in:2001
+msgid ""
+"However, since the distribution policy requires all shell scripts using /bin/"
+"sh to be POSIX compliant, any shell that conforms to POSIX, such as dash, "
+"can serve as /bin/sh. You may wish to do this because dash is faster and "
+"smaller than bash."
+msgstr ""
+"Nembargantes, como a política da distribución require que tódolos scripts "
+"que empreguen /bin/sh sexan compatibles con POSIX, calquera shell que siga "
+"POSIX, coma dash, pode servir coma /bin/sh. Pode ser unha boa idea facelo, "
+"xa que dash é máis rápido e máis pequeno que bash."
