--- a/debian/po/ko.po
+++ b/debian/po/ko.po
@@ -1,29 +1,32 @@
-# Czech translation of dash templates
+# Korean translations for dash package
+# dash 패키지에 대한 한국어 번역문.
+# Sunjae Park <darehanl@gmail.com>, 2007.
 #
 msgid ""
 msgstr ""
 "Project-Id-Version: dash\n"
 "Report-Msgid-Bugs-To: Source: dash@packages.debian.org\n"
 "POT-Creation-Date: 2007-11-11 19:37+0000\n"
-"PO-Revision-Date: 2007-11-18 20:08+0100\n"
-"Last-Translator: Miroslav Kure <kurem@debian.cz>\n"
-"Language-Team: Czech <debian-l10n-czech@lists.debian.org>\n"
+"PO-Revision-Date: 2007-11-15 15:19-0500\n"
+"Last-Translator: Sunjae Park <darehanl@gmail.com>\n"
+"Language-Team: Korean <debian-l10n-korean@lists.debian.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"Plural-Forms: nplurals=1; plural=0;\n"
 
 #. Type: boolean
 #. Description
 #: ../dash.templates.in:2001
 msgid "Install dash as /bin/sh?"
-msgstr "Nainstalovat dash jako /bin/sh?"
+msgstr "dash를 /bin/sh로 설치할까요?"
 
 #. Type: boolean
 #. Description
 #: ../dash.templates.in:2001
 msgid "The default /bin/sh shell on Debian and Debian-based systems is bash."
 msgstr ""
-"Výchozím shellem /bin/sh je v Debianu a systémech z něj odvozených bash."
+"데비안과 데비안 기반 시스템은 모두 bash를 기본 /bin/sh용 셸로 사용합니다."
 
 #. Type: boolean
 #. Description
@@ -34,7 +37,7 @@ msgid ""
 "can serve as /bin/sh. You may wish to do this because dash is faster and "
 "smaller than bash."
 msgstr ""
-"Protože však politika distribuce vyžaduje, aby byly všechny shellové skripty "
-"využívající /bin/sh kompatibilní s POSIXem, můžete jako /bin/sh použít "
-"jakýkoliv shell splňující normu POSIX, například shell dash. Určitě to stojí "
-"za vyzkoušení, protože dash je rychlejší a menší než bash."
+"하지만 배포판의 정책에 의하면 /bin/sh을 사용하는 셸 스크립트는 모두 POSIX과 "
+"호환되어야 한다고 지정하고 있으며, dash와 같이 POSIX 호환 셸이기만 하면 /bin/"
+"sh로 사용할 수 있습니다. dash는 bash보다 작고 빠르기 때문에 dash를 사용하길 "
+"원하실 수 있습니다."
