--- a/debian/po/pt.po
+++ b/debian/po/pt.po
@@ -1,47 +1,45 @@
-# translation of dash_0.4.18_pt.po to Portuguese
-#
-#    Translators, if you are not familiar with the PO format, gettext
-#    documentation is worth reading, especially sections dedicated to
-#    this format, e.g. by running:
-#         info -n '(gettext)PO Files'
-#         info -n '(gettext)Header Entry'
-#    Some information specific to po-debconf are available at
-#            /usr/share/doc/po-debconf/README-trans
-#         or http://www.debian.org/intl/l10n/po-debconf/README-trans#
-#    Developers do not need to manually edit POT or PO files.
-# Bruno Rodrigues <bruno.rodrigues@litux.org>, 2003-2007.
+# Portuguese translation of dash's debconf messages.
+# Copyright (C) 2007 
+# This file is distributed under the same license as the dash package.
+# Ricardo Silva <ardoric@gmail.com>, 2007.
 #
 msgid ""
 msgstr ""
-"Project-Id-Version: dash_0.4.18_pt\n"
-"Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2007-01-29 07:27+0100\n"
-"PO-Revision-Date: 2007-01-29 13:21+0100\n"
-"Last-Translator: Bruno Rodrigues <bruno.rodrigues@litux.org>\n"
-"Language-Team: Portuguese <debian-l10n-portuguese@lists.debian.org>\n"
+"Project-Id-Version: dash 0.5.4-3\n"
+"Report-Msgid-Bugs-To: Source: dash@packages.debian.org\n"
+"POT-Creation-Date: 2007-11-11 19:37+0000\n"
+"PO-Revision-Date: 2007-11-26 21:46+0000\n"
+"Last-Translator: Ricardo Silva <ardoric@gmail.com>\n"
+"Language-Team: Portuguese <traduz@debianpt.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Generator: KBabel 1.0.2\n"
 
 #. Type: boolean
 #. Description
-#: ../dash.templates.in:1001
+#: ../dash.templates.in:2001
 msgid "Install dash as /bin/sh?"
 msgstr "Instalar dash como /bin/sh?"
 
 #. Type: boolean
 #. Description
-#: ../dash.templates.in:1001
-msgid ""
-"Bash is the default /bin/sh on a Debian system.  However, since the Debian "
-"policy requires all shell scripts using /bin/sh to be POSIX compliant, any "
-"shell that conforms to POSIX can serve as /bin/sh.  Since dash is POSIX "
-"compliant, it can be used as /bin/sh.  You may wish to do this because dash "
-"is faster and smaller than bash."
+#: ../dash.templates.in:2001
+msgid "The default /bin/sh shell on Debian and Debian-based systems is bash."
 msgstr ""
-"A Bash é a shell por omissão nos sistemas Debian. Porém, como as regras da "
-"Debian obrigam a que todos os scripts que usem a /bin/sh sejam compatíveis "
-"POSIX, quaisquer shells que sejam conforme as normas POSIX podem ser usadas "
-"como substituto da /bin/sh, o que é o caso da Dash. Visto que a Dash é mais "
-"rápida e consome menos recursos que a Bash, poderá optar por usar a Dash."
+"A shell em /bin/sh por omissão em sistemas Debian e baseados em Debian é a "
+"bash."
+
+#. Type: boolean
+#. Description
+#: ../dash.templates.in:2001
+msgid ""
+"However, since the distribution policy requires all shell scripts using /bin/"
+"sh to be POSIX compliant, any shell that conforms to POSIX, such as dash, "
+"can serve as /bin/sh. You may wish to do this because dash is faster and "
+"smaller than bash."
+msgstr ""
+"No entanto, uma vez que a política da distribuição exige que todos os "
+"scripts que usem /bin/sh sejam compatíveis com POSIX, qualquer shell que "
+"seja compatível com POSIX, tal como a dash, pode servir como /bin/sh. Pode-"
+"lhe ser preferível fazer isto uma vez que a dash é mais pequena e rápida que "
+"a bash."
