--- a/debian/po/ru.po
+++ b/debian/po/ru.po
@@ -1,4 +1,4 @@
-# translation of dash_0.5.3-6.1_debconf_ru.po to Russian
+# translation of ru.po to Russian
 #
 #    Translators, if you are not familiar with the PO format, gettext
 #    documentation is worth reading, especially sections dedicated to
@@ -15,37 +15,43 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: 0.5.3-6.1\n"
-"Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2007-01-29 07:27+0100\n"
-"PO-Revision-Date: 2007-01-29 21:38+0300\n"
+"Report-Msgid-Bugs-To: Source: dash@packages.debian.org\n"
+"POT-Creation-Date: 2007-11-11 19:37+0000\n"
+"PO-Revision-Date: 2007-11-16 19:04+0300\n"
 "Last-Translator: Yuri Kozlov <kozlov.y@gmail.com>\n"
 "Language-Team: Russian <debian-l10n-russian@lists.debian.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "X-Generator: KBabel 1.11.4\n"
-"Plural-Forms:  nplurals=3; plural=(n%10==1 && n%100!=11 ? 0 : n%10>=2 && n%10<=4 && (n%100<10 || n%100>=20) ? 1 : 2);\n"
+"Plural-Forms:  nplurals=3; plural=(n%10==1 && n%100!=11 ? 0 : n%10>=2 && n%"
+"10<=4 && (n%100<10 || n%100>=20) ? 1 : 2);\n"
 
 #. Type: boolean
 #. Description
-#: ../dash.templates.in:1001
+#: ../dash.templates.in:2001
 msgid "Install dash as /bin/sh?"
-msgstr "Настроить символическую ссылку /bin/sh на dash?"
+msgstr "Установить dash как /bin/sh?"
 
 #. Type: boolean
 #. Description
-#: ../dash.templates.in:1001
-msgid ""
-"Bash is the default /bin/sh on a Debian system.  However, since the Debian "
-"policy requires all shell scripts using /bin/sh to be POSIX compliant, any "
-"shell that conforms to POSIX can serve as /bin/sh.  Since dash is POSIX "
-"compliant, it can be used as /bin/sh.  You may wish to do this because dash "
-"is faster and smaller than bash."
+#: ../dash.templates.in:2001
+msgid "The default /bin/sh shell on Debian and Debian-based systems is bash."
 msgstr ""
-"В системе Debian по умолчанию символическая ссылка /bin/sh указывает на "
-"bash. Однако, так как политика Debian требует, чтобы все сценарии оболочки, "
-"использующие /bin/sh, были совместимы с POSIX, то /bin/sh может указывать "
-"на любую оболочку, совместимую с POSIX. Так как dash совместим с POSIX, то "
-"/bin/sh может указывать на него. Если сравнивать c bash, то основными "
-"преимуществами dash являются скорость и размер."
+"Оболочкой командной строки /bin/sh в Debian и основанных на Debian системах "
+"по умолчанию является bash."
 
+#. Type: boolean
+#. Description
+#: ../dash.templates.in:2001
+msgid ""
+"However, since the distribution policy requires all shell scripts using /bin/"
+"sh to be POSIX compliant, any shell that conforms to POSIX, such as dash, "
+"can serve as /bin/sh. You may wish to do this because dash is faster and "
+"smaller than bash."
+msgstr ""
+"Однако, так как политика дистрибутива требует, чтобы все сценарии оболочки, "
+"использующие /bin/sh, были совместимы с POSIX, то /bin/sh может указывать на "
+"любую оболочку, совместимую с POSIX. Так как dash совместима с POSIX, то она "
+"может использоваться как /bin/sh. Если сравнивать c bash, то основными "
+"преимуществами dash являются большая скорость и меньший размер."
