--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,14 @@
+dash (0.5.4-4) unstable; urgency=low
+
+  * debian/diff/0038-EVAL-Fix-unaligned-trap-on-sparc.diff: new; fix
+    unaligned trap on sparc (thx Steve Langasek, closes: #456399).
+  * debian/diff/0039-ARITH-If-imaxdiv-isn-t-available-use-and-ope.diff: new;
+    if imaxdiv() isn't available, use / and % operators (closes: #456398).
+  * debian/diff/0038-run-aclocal-autoconf-autoheader-automake.diff: redo
+    as debian/diff/0040-*.
+
+ -- Gerrit Pape <pape@smarden.org>  Fri, 21 Dec 2007 09:02:07 +0000
+
 dash (0.5.4-3) unstable; urgency=low
 
   * debian/diff/0005-*..0037-*: new: from upstream git.
