--- a/debian/changelog
+++ b/debian/changelog
@@ -6,8 +6,10 @@ dash (0.5.4-4) unstable; urgency=low
     if imaxdiv() isn't available, use / and % operators (closes: #456398).
   * debian/diff/0038-run-aclocal-autoconf-autoheader-automake.diff: redo
     as debian/diff/0040-*.
+  * debian/po/vi.po: [INTL:vi] Vietnamese debconf templates translation
+    update (thx Clytie Siddall, closes: #453625).
 
- -- Gerrit Pape <pape@smarden.org>  Fri, 21 Dec 2007 09:02:07 +0000
+ -- Gerrit Pape <pape@smarden.org>  Fri, 21 Dec 2007 09:15:50 +0000
 
 dash (0.5.4-3) unstable; urgency=low
 
