--- a/debian/po/vi.po
+++ b/debian/po/vi.po
@@ -1,51 +1,45 @@
 # Vietnamese translation for dash.
 # Copyright © 2007 Free Software Foundation, Inc.
-# Clytie Siddall <clytie@riverland.net.au>, 2005-7.
+# Clytie Siddall <clytie@riverland.net.au>, 2005-2007.
 # 
 msgid ""
-msgstr ""
-"Project-Id-Version: dash 0.5.2-5\n"
+""
+msgstr "Project-Id-Version: dash 0.5.2-5\n"
 "Report-Msgid-Bugs-To: Source: dash@packages.debian.org\n"
 "POT-Creation-Date: 2007-11-11 19:37+0000\n"
-"PO-Revision-Date: 2007-01-30 18:27+1030\n"
+"PO-Revision-Date: 2007-11-30 19:19+1030\n"
 "Last-Translator: Clytie Siddall <clytie@riverland.net.au>\n"
 "Language-Team: Vietnamese <vi-VN@googlegroups.com>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=1; plural=0;\n"
+"X-Generator: LocFactoryEditor 1.7b1\n"
 
-#. Type: boolean
-#. Description
+#.Type: boolean
+#.Description
 #: ../dash.templates.in:2001
 msgid "Install dash as /bin/sh?"
-msgstr "Cài đặt trình dash chạy « /bin/sh » không?"
+msgstr "Cài đặt dash chạy « /bin/sh » không?"
 
-#. Type: boolean
-#. Description
+#.Type: boolean
+#.Description
 #: ../dash.templates.in:2001
 msgid "The default /bin/sh shell on Debian and Debian-based systems is bash."
-msgstr ""
+msgstr "Trên hệ thống Debian và dựa trên Debian, trình bao « /bin/sh » mặc định là bash."
 
-#. Type: boolean
-#. Description
+#.Type: boolean
+#.Description
+# msgid ""
+# Bash is the default /bin/sh on a Debian system.  However, since the 
+# Debian policy requires all shell scripts using /bin/sh to be POSIX 
+# compliant, any shell that conforms to POSIX can serve as /bin/sh.  Since 
+# dash is POSIX compliant, it can be used as /bin/sh.  You may wish to do 
+# this because dash is faster and smaller than bash.
 #: ../dash.templates.in:2001
-#, fuzzy
-#| msgid ""
-#| "Bash is the default /bin/sh on a Debian system.  However, since the "
-#| "Debian policy requires all shell scripts using /bin/sh to be POSIX "
-#| "compliant, any shell that conforms to POSIX can serve as /bin/sh.  Since "
-#| "dash is POSIX compliant, it can be used as /bin/sh.  You may wish to do "
-#| "this because dash is faster and smaller than bash."
 msgid ""
 "However, since the distribution policy requires all shell scripts using /bin/"
 "sh to be POSIX compliant, any shell that conforms to POSIX, such as dash, "
 "can serve as /bin/sh. You may wish to do this because dash is faster and "
 "smaller than bash."
-msgstr ""
-"Trình bash là trình bao (« /bin/sh ») mặc định trong hệ thống Debian. Tuy "
-"nhiên, vì chính sách Debian cần thiết mọi văn lệnh trình bao có dùng « /bin/"
-"sh » chỉ tuân theo POSIX, bất cứ trình bao nào cũng tuân theo POSIX có thể "
-"chạy « /bin/sh ». Vì trình dash có phải tuân theo POSIX, bạn có thể sử dụng "
-"nó là « /bin/sh ». Bạn có lẽ sẽ muốn làm như thế vì trình dash chạy nhanh "
-"hơn, là chương trình nhỏ hơn trình bash."
+msgstr "Tuy nhiên, vì chính sách phân phối cần thiết mọi văn lệnh trình bao đều dùng « /bin/sh » thì tùy theo POSIX, bất cứ trình bao nào tùy theo POSIX, v.d. dash, có thể chạy như « /bin/sh »."
