--- a/debian/po/nl.po
+++ b/debian/po/nl.po
@@ -16,7 +16,7 @@ msgstr ""
 "Project-Id-Version: dash 0.4.18\n"
 "Report-Msgid-Bugs-To: Source: dash@packages.debian.org\n"
 "POT-Creation-Date: 2007-11-11 19:37+0000\n"
-"PO-Revision-Date: 2007-01-29 22:12+0100\n"
+"PO-Revision-Date: 2007-11-12 20:52+0100\n"
 "Last-Translator: Tim Dijkstra <tim@famdijkstra.org>\n"
 "Language-Team: Debian Dutch <debian-l10n-dutch@lists.debian.org>\n"
 "MIME-Version: 1.0\n"
@@ -33,27 +33,19 @@ msgstr "dash als /bin/sh installeren?"
 #. Description
 #: ../dash.templates.in:2001
 msgid "The default /bin/sh shell on Debian and Debian-based systems is bash."
-msgstr ""
+msgstr "De standaard /bin/sh shell op Debian en Debian-gebaseerde systemen is bash."
 
 #. Type: boolean
 #. Description
 #: ../dash.templates.in:2001
-#, fuzzy
-#| msgid ""
-#| "Bash is the default /bin/sh on a Debian system.  However, since the "
-#| "Debian policy requires all shell scripts using /bin/sh to be POSIX "
-#| "compliant, any shell that conforms to POSIX can serve as /bin/sh.  Since "
-#| "dash is POSIX compliant, it can be used as /bin/sh.  You may wish to do "
-#| "this because dash is faster and smaller than bash."
 msgid ""
 "However, since the distribution policy requires all shell scripts using /bin/"
 "sh to be POSIX compliant, any shell that conforms to POSIX, such as dash, "
 "can serve as /bin/sh. You may wish to do this because dash is faster and "
 "smaller than bash."
 msgstr ""
-"Bash is de standaard /bin/sh op een Debian-systeem. Debian-beleid eist "
+"Debian-beleid eist "
 "echter dat alle shell-scripts die /bin/sh gebruiken moeten voldoen aan de "
-"POSIX-standaard, dus elke shell die zich conformeert aan POSIX kan dienst "
-"doen als /bin/sh. Omdat dash zich conformeert aan POSIX, kan het dus "
-"gebruikt worden als /bin/sh. Een reden om dat inderdaad te doen is dat dash "
-"sneller en kleiner is dan bash."
+"POSIX-standaard. Elke shell die zich conformeert aan POSIX, zoals dash, "
+"kan dienst doen als /bin/sh. "
+"Een reden om dit te overwegen is dat dash sneller en kleiner is dan bash."
